Se añadieron instrucciones de ejecución y lanzamiento